# CSRC

./: .gitignore  FLOW.md  MODELING.md  add_x64_platform.ps1  cleanup_x64_libs.ps1
datasources/ui/: ui_admin_panel.inc  ui_airspeeder_panel.inc  ui_appearance_tab.inc  ui_avatar_selection.inc  ui_avatar_setup_prof.inc  ui_calendar.inc  ui_cinematic_conversation.inc  ui_city_terrain_painter.inc  ui_color_wheel.inc  ui_decorator_camera_panel.inc  ui_gcw_information.inc  ui_gm_sethue.inc  ui_ground_hud.inc  ui_ground_hud_buttonbar.inc  ui_ground_hud_buttonbar_skinned.inc  ui_ground_hud_toolbar_skinned.inc  ui_hud_space.inc  ui_loginscreen.inc  ui_options.inc  ui_palette_ground.inc  ui_pda.inc  ui_pda_char_sheet.inc  ui_pda_collections.inc  ui_pda_cybernetics.inc  ui_pda_data_storage.inc  ui_pda_decoratorspawn.inc  ui_pda_examine.inc  ui_pda_expertise.inc  ui_pda_incubator.inc  ui_pda_inventory.inc  ui_pda_location_display.inc  ui_pda_net_status.inc  ui_pda_quest_acceptance.inc  ui_root.ui  ui_script.ui  ui_scripted.inc  ui_scripted_videoplayer.inc  ui_styles.inc  ui_warnings.inc
src/engine/client/application/Direct3d9/src/win32/: Direct3d9.cpp  Direct3d9_LightManager.cpp  Direct3d9_LightManager.h  Direct3d9_RenderTarget.cpp
src/engine/client/application/Miff/src/win32/: mIFF.dox  miff.cpp
src/engine/client/application/NpcEditor/src/win32/: GameWidget.cpp  MainWindow.cpp  MainWindow.h
src/engine/client/application/NpcEditor/ui/: BaseMainWindow.ui
src/engine/client/application/TerrainEditor/src/win32/: View3dView.cpp
src/engine/shared/application/DataTableTool/src/shared/: DataTableTool.cpp
src/engine/shared/application/Nuna/: CMakeLists.txt
src/engine/shared/application/Nuna/src/: Nuna.h  NunaCompression.h  NunaCrc.h  NunaToc.cpp  NunaToc.h
src/engine/shared/application/SwgMapRasterizer/: CMakeLists.txt
src/engine/shared/application/SwgMapRasterizer/src/shared/: SwgMapRasterizer.cpp
src/engine/shared/application/TreeFileRspBuilder/src/win32/: TreeFileRspBuilder.cpp
src/game/client/application/SwgClient/src/win32/: ClientMain.cpp
src/game/client/application/SwgCsTool/src/win32/: SWGCSTool.csproj
src/game/client/application/SwgGodClient/src/: ActionsEdit.cpp  ActionsFileControl.cpp  ActionsFileControl.h  ActionsObjectTemplate.cpp  ActionsTool.cpp  ActionsTool.h  ActionsWindow.cpp  ActionsWindow.h  AdvancedCopyPasteWidget.cpp  BuildoutAreaSupport.cpp  BuildoutEditorWindow.cpp  BuildoutEditorWindow.h  ConfigGodClient.cpp  ConfigGodClient.h  DatatableEditorWindow.cpp  DatatableEditorWindow.h  FileServerTreeWindow.cpp  FileServerTreeWindow.h  GameWidget.cpp  GameWidget.h  GameWindow.cpp  GodClientData.cpp  GodClientData.h  MainFrame.cpp  MainFrame.h  ObjectEditor.cpp  ServerCommander.cpp  ServerCommander.h  StackerTool.cpp  StackerTool.h  TemplateEditorWindow.cpp  TemplateEditorWindow.h
src/game/client/application/SwgGodClient/src/shared/ui/: BaseStackerTool.ui  swg_godclient.pro
src/game/shared/application/SwgFileControl/: SwgFileControl.cfg
src/game/shared/application/SwgFileControl/src/shared/: FileControlReloadHandler.cpp  FileControlReloadHandler.h  FileControlServer.cpp
tools/: build_cluster_controller.pl  build_cluster_daemon.pl  copyExe.btm  sync-ui-to-exe.bat
